@@ -33,8 +33,10 @@ exportClasses(MySQLObject)
 exportClasses(MySQLResult)
 exportMethods(SQLKeywords)
 exportMethods(dbApply)
+exportMethods(dbBegin)
 exportMethods(dbClearResult)
 exportMethods(dbColumnInfo)
+exportMethods(dbCommit)
 exportMethods(dbConnect)
 exportMethods(dbDataType)
 exportMethods(dbDisconnect)
