@@ -1,12 +1,16 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/transactions.R
 \docType{methods}
-\name{dbCommit,MySQLConnection-method}
+\name{transactions}
+\alias{dbBegin,MySQLConnection-method}
 \alias{dbCommit,MySQLConnection-method}
 \alias{dbRollback,MySQLConnection-method}
+\alias{transactions}
 \title{DBMS Transaction Management}
 \usage{
 \S4method{dbCommit}{MySQLConnection}(conn, ...)
+
+\S4method{dbBegin}{MySQLConnection}(conn, ...)
 
 \S4method{dbRollback}{MySQLConnection}(conn, ...)
 }
@@ -18,5 +22,24 @@
 }
 \description{
 Commits or roll backs the current transaction in an MySQL connection.
+Note that in MySQL DDL statements (e.g. \code{CREATE TABLE}) can not
+be rolled back.
+}
+\examples{
+if (mysqlHasDefault()) {
+con <- dbConnect(RMySQL::MySQL())
+df <- data.frame(id = 1:5)
+
+dbWriteTable(con, "df", df)
+dbBegin(con)
+dbGetQuery(con, "UPDATE df SET id = id * 10")
+dbGetQuery(con, "SELECT id FROM df")
+dbRollback(con)
+
+dbGetQuery(con, "SELECT id FROM df")
+
+dbRemoveTable(con, "df")
+dbDisconnect(con)
+}
 }
 
